idf_component_register(
    SRCS 
    "ai.c"
"ao.c"
"av.c"
"bi.c"
"bo.c"
"bv.c"
"device.c"
"dlenv.c"
"h_alarm_ack.c"
"h_arf.c"
"h_arf_a.c"
"h_awf.c"
"h_ccov.c"
"h_cov.c"
"h_dcc.c"
"h_gas_a.c"
"h_getevent.c"
"h_get_alarm_sum.c"
"h_iam.c"
"h_ihave.c"
"h_npdu.c"
"h_pt.c"
"h_pt_a.c"
"h_rd.c"
"h_rp.c"
"h_rpm.c"
"h_rpm_a.c"
"h_rp_a.c"
"h_rr.c"
"h_rr_a.c"
"h_ts.c"
"h_ucov.c"
"h_upt.c"
"h_whohas.c"
"h_whois.c"
"h_wp.c"
"h_wpm.c"
"nc.c"
"noserv.c"
"s_arfs.c"
"s_awfs.c"
"s_cevent.c"
"s_cov.c"
"s_dcc.c"
"s_iam.c"
"s_ihave.c"
"s_ptransfer.c"
"s_rd.c"
"s_readrange.c"
"s_router.c"
"s_rp.c"
"s_rpm.c"
"s_ts.c"
"s_uevent.c"
"s_upt.c"
"s_whohas.c"
"s_whois.c"
"s_wp.c"
"s_wpm.c"
"txbuf.c"
    INCLUDE_DIRS "include")
